# fir

./: .flake8  Makefile  README.md  convert_to_toml.py  fir-future.toml  fir-v1.toml  fir.v1.todo.toml  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
fir/: args.py  context.py
fir/builder/: __init__.py  arg_parser.py
fir/cfg/: env_prod.py
fir/cmd/: __init__.py  base_commands.py  cmd_builder.py  cmd_builder_v2.py  commands.py  config_commands.py  handlers.py  profile_commands.py  set_commands.py  status_commands.py  task_data_commands.py
fir/cmd/builder/: __init__.py  arg_parser.py
fir/config/: __init__.py  env_dev.py  env_prod.py
fir/data/: __init__.py  defaults.py  dtos.py  profile.py  schemas.py  settings.py
fir/handlers/: __init__.py  base.py  set.py  status.py
fir/helpers/: __init__.py  commands.py  dates.py  files.py  logger.py  parse.py
fir/model/: dtos.py  schemas.py
fir/types/: __init__.py  config_options.py  dtos.py  parameters.py  schemas.py
fir/utils/: args.py  dates.py  parse.py
fir/utils/logging/: logger.py  profile_logging.py
scripts/: convert_to_toml.py  generate_schema.py  is_a_literal_an_iterable.py
test/: test_builder.py
