[tool.poetry]
name = "fir"
version = "0.1.0"
description = ""
authors = ["weavc <chrisweaver1@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fir"}]

[tool.poetry.dependencies]
python = "^3.11"
termcolor = "^2.3.0"
tabulate = "^0.9.0"
shortuuid = "^1.0.11"
tomli-w = "^1.0.0"

[tool.poetry.scripts]
fir = 'fir.cmd:cmd'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
