[tool.poetry]
name = "fir"
version = "0.1.0"
description = ""
authors = ["weavc <chrisweaver1@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fir"}]

[tool.poetry.dependencies]
python = "^3.11"
termcolor = "^2.3.0"
tabulate = "^0.9.0"
shortuuid = "^1.0.11"
tomli-w = "^1.0.0"
marshmallow = "~3.20.1"

[tool.poetry.scripts]
fir = 'fir.cmd:cmd'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3